<resources>
    <string name="app_name">BU-News</string>

    <string name="register">Register</string>
    <string name="registering">Registering…</string>

    <string name="login">Login</string>
    <string name="logging_in">Logging in…</string>

    <!--  Account Setting Texts  -->
    <string name="back_button">Back Button</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout_text">Logout</string>
    <string name="placeholder_email_text">Placeholder Email</string>
    <string name="student_email_text">Student Email</string>
    <string name="placeholder_name_text">Placeholder Name</string>
    <string name="change_password_text">Change Password</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="post_description">Want to share your own news? Post it here! Make sure to post relevant news only or else it won\'t be approved. Examples of such news are: club events, informative bootcamps, student achievements, etc.</string>
    <string name="top_news_heading">Top News</string>
    <string name="tagline">The pulse of university life</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!--  Category DropDown items  -->
    <string-array name="category_names">
        <item>All</item>
        <item>General</item>
        <item>Sports</item>
        <item>Event</item>
        <item>Clubs Related</item>
    </string-array>

    <string-array name="choice_category_names">
        <item>General</item>
        <item>Sports</item>
        <item>Event</item>
        <item>Clubs Related</item>
    </string-array>

    <string name="post">Post</string>
    <string name="post_loading">Posting…</string>
    <string name="no_image_selected">No image selected</string>
    <string name="selected_image">Selected image: %1$s</string>
    <string name="subscribing">Subscribing...</string>
    <string name="subscribe">Subscribe</string>
    <string name="placeholder_title">Placeholder title</string>
    <string name="detailed_news_image">Detailed News Image</string>
    <string name="placeholder_description">Placeholder description</string>
    <string name="profile_icon">profile icon</string>
    <string name="full_name">Full Name</string>
    <string name="email_icon">email icon</string>
    <string name="select_date_label">Please select a date</string>
    <string name="date_unavailable_label">Date not available</string>
    <string name="no_sub_news">No subscribed news yet. Subscribe to your desired categories to get news from them.</string>
    <string name="weather_unavailable">Weather data unavailable</string>
    <string name="login_here">Login here</string>
    <string name="student_email">Student Email</string>
    <string name="password">Password</string>
    <string name="swipe_to_register">New to the app?\n Swipe right to register</string>
    <string name="anonymous_login_text">Or click here to login anonymously</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="not_provided">Not provided</string>
    <string name="back">Back</string>
    <string name="event_date">Event Date</string>
    <string name="select_date">Select Date</string>
    <string name="submit">Submit</string>
    <string name="add_event">Add Event</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone_91_9667658415">Phone: +91 9667658415</string>
    <string name="email_chiragaggarwal5k_gmail_com">Email: chiragaggarwal5k@gmail.com</string>
    <string name="contact_us_text">Hi! Seems like you are facing some issues. Please note Team Obsidian is a small group of 3 college students so we are not able to provide 24/7 support. We will try our best to resolve your issue as soon as possible. Thank you for your patience.</string>
    <string name="news_date">News Date</string>
    <string name="news_author">News Author</string>
    <string name="detailed_news">Detailed News</string>
    <string name="placeholder_address">Placeholder Address</string>
    <string name="city_or_zip_code">City or Zip Code</string>
    <string name="address_icon">Address Icon</string>
    <string name="placeholder_contact">Placeholder Contact</string>
    <string name="contact">Contact</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="edit_full_name">Edit Full Name</string>
    <string name="placeholder_name_to_be_replaced">Placeholder Name to be replaced</string>
    <string name="save_changes">Save Changes</string>
    <string name="contact_icon">Contact Icon</string>
    <string name="you_can_t_change_your_email">You can\'t change your email</string>

</resources>