<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/profile_header"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/arrow_back_logo"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_settings"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/logout_text"
            android:textColor="@color/dark_red"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_red"
        android:layout_below="@id/profile_header"
        android:layout_marginHorizontal="8dp"
        />

    <LinearLayout
        android:id="@+id/profile_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_header"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginVertical="20dp"
            android:src="@drawable/default_profile_icon"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/dark_red"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_name_text"
            android:textSize= "20sp"
            android:textColor="@color/light_red"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/dark_red"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_body"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="15dp"
        >

        <ImageView
            android:id="@+id/mini_profile_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/profile_icon_pink"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Full Name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:layout_toEndOf="@id/mini_profile_icon"/>

        <TextView
            android:id="@+id/full_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_name_text"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:gravity="center"/>

    </RelativeLayout>

    <View
        android:id="@+id/line_divider1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_below="@id/user_info"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"/>

    <RelativeLayout
        android:id="@+id/user_email_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_divider1"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="15dp"
        >

        <ImageView
            android:id="@+id/mini_email_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/email_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_email_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:layout_toEndOf="@id/mini_email_icon"/>

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_email_text"
            android:textSize="14sp"
            android:layout_marginTop="38dp"
            android:layout_marginStart="35dp"
            android:gravity="center"/>

    </RelativeLayout>

    <View
        android:id="@+id/line_divider2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_below="@id/user_email_info"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_divider2"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_bg"
            android:text="@string/edit_profile_text"
            android:textColor="#8D3339"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:text="@string/change_password_text"
            android:padding="10dp"
            android:textColor="#8D3339"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>


</RelativeLayout>