<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/profile_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/arrow_back_white"
                app:tint="@color/textColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/back_button"
                android:text="Detailed Lost/Found"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:id="@+id/profile_header_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/profile_header"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/colorPrimaryDark" />


        <TextView
            android:id="@+id/detailedLostFound_ItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_header_divider"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/placeholder_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/detailedLostFound_Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailedLostFound_ItemName"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:maxHeight="500dp"
            android:scaleType="fitStart" />

        <TextView
            android:id="@+id/detailedLostFound_ItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailedLostFound_Image"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/placeholder_description"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detailedLostFound_ItemLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailedLostFound_ItemDescription"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/placeholder_description"
            android:textSize="16sp" />

        <View
            android:id="@+id/detailed_lostfound_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/detailedLostFound_ItemLocation"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/detailedLostFound_UploaderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailed_lostfound_divider"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/news_author"
            android:textAlignment="textEnd"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detailedLostFound_UploaderContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailedLostFound_UploaderName"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/news_date"
            android:textAlignment="textEnd"
            android:textSize="16sp" />


    </RelativeLayout>
</ScrollView>